--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -129,8 +129,25 @@
   &.i-back {
   	&:before {
   		content: "\f104";
-  	}
+  	}    
   }
+  &.i-share {
+		&:before {
+			content: "\f1d9";
+		}
+	}
+	&.i-pin {
+		&:before {
+			background: url(../images/icons/pin.png) no-repeat;
+			background-size: auto 100%;
+		}
+	}
+	&.i-cart {
+		&:before {
+			background: url(../images/icons/add-cart.png) no-repeat;
+			background-size: auto 100%;
+		}
+	}
 }
 .shop-name {
 	width: 100%;
