--- a/myface-onface-html/src/views/block/_m-product-list-block.html
+++ b/myface-onface-html/src/views/block/_m-product-list-block.html
@@ -15,16 +15,5 @@
   <button class="btn btn-loadmore">Xem thêm các sản phẩm khác </button>
 </div>
 <!--fixed-block-->
-<div class="fixed-block" style="display: none;">
-  <!--cart-block-->
-  <div class="cart-block">
-    <a class="cart-link" href="cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
-      <span class="cart-number">0</span>
-    </a>
-  </div>
-  <div class="back-to-top">
-    <a class="back-to-top-btn" href="#">
-      back to top
-    </a>
-  </div>
-</div><!--/.fixed-block-->
+{% include "_fixed-block.html" %}
+<!--/.fixed-block-->
