--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -112,6 +112,19 @@ img {
   margin: 25px 0;
   text-align: center;
 }
+.fixed-block {
+  position: fixed;
+  right: 30px;
+  bottom: 20px;
+  .cart-block,
+  .back-to-top {
+    width: 40px;
+    height: 40px;
+  }
+  .back-to-top {
+    margin-top: 10px;
+  }
+}
 //animation
 .slide-right {
   display: inline-block;
