--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -168,41 +168,48 @@
                   </table><!-- /.table -->
                 </div>    
               </div>
-
-              <!--like-group-wrap-->
-              <div class="like-group-wrap">
-                <!--lightbox-wrap-->
-                <div class="lightbox-wrap" style="width: 100%; top: -90px">
-                  <!--add phone number-->
-                  <div class="add-number-to-buy">
-                    <div class="input-group send-group">
-                      <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
-                      <span class="input-group-btn">
-                        <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
-                      </span>
-                    </div>
-                    <div class="close-back">
-                      <a class="close-btn" href="#"></a><!--/.close-back-->
-                    </div>
-                  </div><!--./add phone number-->
-
-                  <!--add phone number-->
-                  <div class="add-number-to-buy" style="width: 100%; margin-top: 10px;">
-                  </div><!--./add phone number-->
-                </div><!--/.lightbox-wrap-->
-
-                <div class="block text-center">
-                  <button class="btn btn-primary btn-like-action"><span class="icon"></span></button>
-                </div>
-              </div><!--/.like-group-wrap-->
             </div><!--product-detail-->
+
+            <!--like-group-wrap-->
+            <div class="like-group-wrap">
+              <!--lightbox-wrap-->
+              <div class="lightbox-wrap lightbox-2">
+                <!--add phone number-->
+                <div class="add-number-to-buy number-box">
+                  <div class="input-group send-group">
+                    <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
+                    <span class="input-group-btn">
+                      <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
+                    </span>
+                  </div>
+                </div><!--./add phone number-->
+
+                <!--add phone number-->
+                <div class="add-number-to-buy like-box">
+                  <ul class="icon-tools">
+                    <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></li>
+                    <li class="m-pin"><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></li>     
+                    <li class="m-buy"><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></li>
+                    <li class="buy-now"><button class="btn btn-primary btn-number-action" type="button"><span class="icon"></span>Mua liền<span class="icon"></span></button></li>
+                  </ul>
+                </div><!--./add phone number-->
+
+                <div class="close-back">
+                  <a class="close-btn" href="#"></a><!--/.close-back-->
+                </div>
+              </div><!--/.lightbox-wrap-->
+
+              <div class="block text-center">
+                <button class="btn btn-primary btn-like-action"><span class="icon"></span></button>
+              </div>
+            </div><!--/.like-group-wrap-->
 
             <!--facebook-comment-->
             <div class="alert alert-box">
               <label>Hey! đừng đi vội</label>
               <p>Sản phẩm, chất lượng, dịch vụ Shop có làm bạn hài lòng không? Hãy để lại bình luận, đánh giá để mọi người biết nhé.</p>
             </div>
-            <div class="fb-conmment" style="width: 100%">
+            <div class="fb-conmment">
               <img src="assets/images/upload/fb/fb-2.jpg" alt="myface">
             </div><!--/.facebook-comment-->
           </div><!--./products-gallery-->
@@ -212,6 +219,21 @@
             <div class="info-block">
               <label class="block-title">Giao hàng đến:</label>
               <p class="block-text">Toàn quốc, TP.HCM, Hà Nội, Tuyên Quang, lào Cai...</p>
+            </div>
+            <!--share-block-->
+            <div class="info-block share-block">
+              <ul class="icon-tools">
+                <li class="m-share"><span class="icon i-share"></span><span class="icon-text">Chia sẻ</span></li>
+                <li class="m-view pull-right"><span class="icon i-view">456</span><span class="icon-text">lượt xem</span></li>
+              </ul>
+            </div>
+            <!--view-block-->
+            <div class="info-block view-block">
+              <ul class="icon-tools">
+                <li class="m-like"><span class="icon i-like">789</span><span class="icon-text">thích</span></li>
+                <li class="m-pin"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></li>     
+                <li class="m-buy pull-right"><span class="icon i-buy">123</span><span class="icon-text">mua</span></li>
+              </ul>
             </div>
             <!--price-block-->
             <div class="info-block price-block">
@@ -277,10 +299,10 @@
               </div><!--/.amount-property-->
             </div><!--/.product-property-->
 
-            <div class="info-block add-cart-block">
+            <div class="add-cart-block">
               <button class="btn btn-primary btn-buy-now"><span class="icon"></span><span class="lr-text">Đặt mua</span><br><span class="sc-text">Nhận hàng - Trả tiền sau</span></button>
               <!--lightbox-wrap-->
-              <div class="lightbox-wrap">
+              <div class="lightbox-wrap lightbox-1">
                 <!--add phone number-->
                 <div class="add-number-to-buy">
                   <div class="input-group send-group">
@@ -289,13 +311,21 @@
                       <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
                     </span>
                   </div>
-                  <div class="close-back">
-                    <a class="close-btn" href="#"></a><!--/.close-back-->
-                  </div>
                 </div><!--./add phone number-->
+                <div class="close-back">
+                  <a class="close-btn" href="#"></a><!--/.close-back-->
+                </div>
               </div><!--/.lightbox-wrap-->
 
-              <button class="btn btn-default btn-add-cart"><span class="icon"></span><span class="lr-text">Thêm vào giỏ</span></button>
+              <button class="btn btn-add-cart"><span class="icon"></span><span class="lr-text">Thêm vào giỏ</span></button>
+            </div>
+
+            <!--pin-block-->
+            <div class="info-block pin-block">
+              <ul class="icon-tools">
+                <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></li>
+                <li class="m-pin pull-right"><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></li>
+              </ul>
             </div>
 
             <!--adr-->
