--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -148,6 +148,11 @@
 			background-size: auto 100%;
 		}
 	}
+	&.i-product {
+		&:before {
+			content: "\f097";
+		}
+	}
 }
 .shop-name {
 	width: 100%;
