--- a/myface-onface-html/src/views/block/_shopper-menu.html
+++ b/myface-onface-html/src/views/block/_shopper-menu.html
@@ -31,19 +31,19 @@
 		    <!--filter-->
 		    <ul class="tabs-menu pull-right">
 		    	<li class="tab-item tab-label">
-		      	<label>35	<span class="tab-span">sản phẩm</span></label>
+		      	<label><span class="icon i-product"></span> 35	<span class="tab-span">sản phẩm</span></label>
 		      </li>
 		      <li class="tab-item tab-label">
-		      	<label>123 <span class="tab-span">lượt xem</span></span></span></label>
+		      	<label><span class="icon i-view"></span> 123 <span class="tab-span">lượt xem</span></span></span></label>
 		      </li>
 		      <li class="tab-item tab-label">
-		      	<label>345 <span class="tab-span">thích</span></span></label>
+		      	<label><span class="icon i-like"></span> 345 <span class="tab-span">thích</span></span></label>
 		      </li>
 		      <li class="tab-item tab-label">
-		      	<label>789 <span class="tab-span">ghim</span></label>
+		      	<label><span class="icon i-pin"></span> 789 <span class="tab-span">ghim</span></label>
 		      </li>
 		      <li class="tab-item tab-single">
-		      	<a href="myface-user-shop-about.html">Giới thiệu shop</a>
+		      	<a class="shop-about" href="#">Giới thiệu shop</a>
 		      </li>
 		    </ul>
 		 	</nav><!--/.tabs-bar-->
