--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -10,6 +10,9 @@
 .mf-product-info-block {
 	padding-top: 0;
 	border-top: 0;
+	.shop-name {
+		padding: 10px 0 0;
+	}
 	.shop-img {
 		width: 25px;
 		height: 25px;
@@ -19,6 +22,7 @@
 		line-height: 25px;
 	}
 	.product-gallery {
+		margin-top: 10px;
 		.thumnail {
 			width: 100%;
 			height: 66px;
@@ -42,6 +46,22 @@
 	.product-detail {
 		width: 100%;
 		float: left;
+		.product-intro {
+			position: relative;
+		}
+		.intro-action {
+			position: absolute;
+			top: 0;
+			right: 0;
+			color: @text-color-1;
+			&:hover {
+				color: @primary-color;
+			}
+			&:before {
+				content: "\f147";
+				font-size: 19px;
+			}
+		}
 	}
 	.info-block {
 		padding: 10px 0;
@@ -58,6 +78,21 @@
 		}	
 		&.pin-block {
 			padding-bottom: 20px;
+		}
+	}
+}
+.shipping-block {
+	position: relative;
+	.shipping-action {
+		position: absolute;
+		bottom: 10px;
+		right: 0;
+		color: @text-color-1;
+		&:hover {
+			color: @primary-color;
+		}
+		&:before {
+			content: "\f055";
 		}
 	}
 }
@@ -78,8 +113,6 @@
 			margin-right: 15px;
 		}
 	}
-}
-.share-block {
 }
 .add-cart-block {
 	width: 100%;
@@ -220,7 +253,7 @@
 .product-gallery-header {
 	width: 100%;
 	float: left;
-	margin-bottom: 20px;
+	margin-bottom: 12px;
 	.product-title {
 		font-weight: 700;
 		font-size: 25px;
