--- a/myface-onface-html/src/views/layout/_layout-base.html
+++ b/myface-onface-html/src/views/layout/_layout-base.html
@@ -15,7 +15,7 @@
 	<!-- Styles -->
 	{% include "../block/_style.html" %}
 	<!-- Favicon -->
-	<link rel="icon", href="assets/images/favicon.ico", type="image/x-icon", sizes="16x16" >
+	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" sizes="16x16" >
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
