--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -10,6 +10,11 @@
 		overflow: hidden;
 		border-bottom: @border;
 		margin-bottom: 15px;
+	 	.container {
+    	> div:last-child {
+    		float: right;
+    	}
+    }
 		@media (max-width: @screen-xs-max) {
 	    height: auto;
 	  }
