--- a/myface-onface-html/src/views/block/_shopper-menu.html
+++ b/myface-onface-html/src/views/block/_shopper-menu.html
@@ -34,10 +34,10 @@
 		      	<label><span class="icon i-product"></span> 35	<span class="tab-span">sản phẩm</span></label>
 		      </li>
 		      <li class="tab-item tab-label">
-		      	<label><span class="icon i-view"></span> 123 <span class="tab-span">lượt xem</span></span></span></label>
+		      	<label><span class="icon i-view"></span> 123 <span class="tab-span">lượt xem</span></label>
 		      </li>
 		      <li class="tab-item tab-label">
-		      	<label><span class="icon i-like"></span> 345 <span class="tab-span">thích</span></span></label>
+		      	<label><span class="icon i-like"></span> 345 <span class="tab-span">thích</span></label>
 		      </li>
 		      <li class="tab-item tab-label">
 		      	<label><span class="icon i-pin"></span> 789 <span class="tab-span">ghim</span></label>
