--- a/myface-onface-html/src/views/block/modal/_alert-modal.html
+++ b/myface-onface-html/src/views/block/modal/_alert-modal.html
@@ -2,8 +2,7 @@
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close remove_text" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span></button>
+        <button type="button" class="close remove_text" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">Thông báo</h4>
       </div>
       <div class="modal-body">
