--- a/myface-onface-html/src/views/block/modal/_invoice-modal.html
+++ b/myface-onface-html/src/views/block/modal/_invoice-modal.html
@@ -2,8 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
         <h1 class="modal-title">Giỏ hàng của bạn: <span class="amount">(Đang có <span class="red-text">2</span> sản phẩm)</span></h1>
       </div>
       <div class="modal-body">
