--- a/myface-onface-html/src/views/block/modal/_yes-no-modal.html
+++ b/myface-onface-html/src/views/block/modal/_yes-no-modal.html
@@ -3,8 +3,7 @@
     <div class="modal-content">
       <form id="">
         <div class="modal-header">
-          <button type="button" class="close remove_text" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span></button>
+          <button type="button" class="close remove_text" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
           <h4 class="modal-title">Xác nhận tác vụ</h4>
         </div>
         <div class="modal-body">
