fix bugs catebar

--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -201,6 +201,8 @@
 		display: block;
 	}
 	.account-label-1 {
+		width: 109px;
+		.ellipsis;
 		font-weight: 600;
 		&:after {
 			content: "\f0d7";
