--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -126,6 +126,11 @@ img {
     margin-top: 10px;
   }
 }
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 //animation
 .slide-right {
   display: inline-block;
@@ -149,4 +154,7 @@ img {
       width: 100%;
     }
   }
+}
+.navbar {
+	border-radius: 0;
 }
