--- a/myface-onface-html/src/views/block/_cate-1-nav.html
+++ b/myface-onface-html/src/views/block/_cate-1-nav.html
@@ -1,4 +1,4 @@
-<div class="catebar">
+<div class="catebar cate-h-1">
 	<h1 class="category-1-name">
 		thời trang
 	</h1>
@@ -10,6 +10,13 @@
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Thời trang demo</span>
+		    </a>
+		  </li>
+		  <li class="cate-item">
+		    <a class="" href="myface-category-2.html">
+		    	<span class="cate-icon">
+		    	</span>
+		    	<span class="cate-name">Đầm</span>
 		    </a>
 		  </li>
 		  {% endfor %}
