--- a/myface-onface-html/src/views/block/_cate-2-nav.html
+++ b/myface-onface-html/src/views/block/_cate-2-nav.html
@@ -1,4 +1,4 @@
-<div class="catebar">
+<div class="catebar cate-h-2">
 	<h1 class="category-1-name">
 		thời trang nữ
 	</h1>
@@ -8,6 +8,11 @@
 		  <li class="cate-item">
 		    <a class="" href="myface-user-shop.html">
 		    	<span class="cate-name">DW Secret Saigon</span>
+		    </a>
+		  </li>
+		  <li class="cate-item">
+		    <a class="" href="myface-user-shop.html">
+		    	<img class="cate-logo" src="assets/images/upload/product/product-9.jpg" alt="myface">
 		    </a>
 		  </li>
 		  {% endfor %}
