--- a/myface-onface-html/src/views/block/_filter-bar.html
+++ b/myface-onface-html/src/views/block/_filter-bar.html
@@ -37,6 +37,18 @@
       		<li><a href="#">Màu sắc 1</a></li>
       		<li><a href="#">Màu sắc 2</a></li>
       		<li><a href="#">Màu sắc 3</a></li>
+      		<li><a href="#">Màu sắc 1</a></li>
+      		<li><a href="#">Màu sắc 2</a></li>
+      		<li><a href="#">Màu sắc 3</a></li>
+      		<li><a href="#">Màu sắc 1</a></li>
+      		<li><a href="#">Màu sắc 2</a></li>
+      		<li><a href="#">Màu sắc 3</a></li>
+      		<li><a href="#">Màu sắc 1</a></li>
+      		<li><a href="#">Màu sắc 2</a></li>
+      		<li><a href="#">Màu sắc 3</a></li>
+      		<li><a href="#">Màu sắc 1</a></li>
+      		<li><a href="#">Màu sắc 2</a></li>
+      		<li><a href="#">Màu sắc 3</a></li>
       	</ul>
       </li>
       <li class="tab-item">
