--- a/myface-onface-html/src/views/block/_tabs-menu.html
+++ b/myface-onface-html/src/views/block/_tabs-menu.html
@@ -1,26 +1,25 @@
-<ul class="tabs-menu">
+<ul class="tabs-menu full-tabs-link">
   <li class="tab-item">
     <a href="#">Nổi bật</a>
     <ul class="dropdown-menu tab-sub">
-      <li><a href="#">Nổi bật 1</a></li>
-      <li><a href="#">Nổi bật 2</a></li>
-      <li><a href="#">Nổi bật 3</a></li>
+      <li><a href="#">Mới nhất</a></li>
+      <li><a href="#">Nhiều lượt xem</a></li>
+      <li><a href="#">Được yêu thích</a></li>
     </ul>
   </li>
   <li class="tab-item">
     <a href="#">Sản phẩm</a>
     <ul class="dropdown-menu tab-sub">
       <li><a href="myface-shop-list.html">Shop</a></li>
-      <li><a href="#">Sản phẩm 2</a></li>
-      <li><a href="#">Sản phẩm 3</a></li>
     </ul>
   </li>
   <li class="tab-item">
     <a href="#">Gần đây</a>
     <ul class="dropdown-menu tab-sub">
-      <li><a href="#">Gần đây 1</a></li>
-      <li><a href="#">Gần đây 2</a></li>
-      <li><a href="#">Gần đây 3</a></li>
+      <li><a href="#">Trong tuần</a></li>
+      <li><a href="#">Trong tháng</a></li>
+      <li><a href="#">Trong năm</a></li>
+      <li><a href="#">Tất cả</a></li>
     </ul>
   </li>
 </ul>
