--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -123,6 +123,11 @@ img {
 .fixed-block .back-to-top {
   margin-top: 10px;
 }
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .slide-right {
   display: inline-block;
   position: relative;
@@ -143,6 +148,9 @@ img {
 }
 .slide-right:hover:before {
   width: 100%;
+}
+.navbar {
+  border-radius: 0;
 }
 .page-margin-bottom {
   margin-bottom: 80px;
@@ -1146,6 +1154,10 @@ img {
   display: block;
 }
 .account-label .account-label-1 {
+  width: 109px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-weight: 600;
 }
 .account-label .account-label-1:after {
@@ -2736,10 +2748,19 @@ footer.main-footer .f-bct > span.bct {
   margin: 0;
   padding: 1px 0;
   text-align: left;
+  max-height: 245px;
+  overflow-y: auto;
 }
-.wrap-product {
-  width: 100%;
-  float: left;
+.tab-sub::-webkit-scrollbar {
+  width: 5px;
+}
+.tab-sub::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.tab-sub::-webkit-scrollbar-thumb {
+  background-color: #949393;
+  border-radius: 4px;
+  outline: 1px solid slategrey;
 }
 .btn-loadmore {
   width: 500px;
@@ -2860,12 +2881,36 @@ footer.main-footer .f-bct > span.bct {
 .catebar .cate-item > a {
   width: 90px;
   height: 90px;
-  padding: 10px;
+  line-height: 90px;
+  overflow: hidden;
+  float: left;
+  padding: 0;
   border: 1px solid #dfdfdf;
   border-radius: 6px;
 }
 .catebar .cate-item > a:hover {
   border-color: #ff5722;
+}
+.catebar.cate-h-1 .cate-item > a {
+  padding: 10px 0;
+}
+.catebar.cate-h-1 .cate-item > a .cate-name {
+  height: 40px;
+  overflow: hidden;
+  vertical-align: top !important;
+}
+.catebar.cate-h-2 .cate-item > a .cate-name {
+  max-height: 75px;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
+}
+.catebar.cate-h-2 .cate-item > a .cate-logo {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+  border-radius: 6px;
 }
 .filterbar .tabs-menu {
   text-align: left;
