--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -39,6 +39,7 @@
 @import "page/myface-cate.less";
 @import "page/myface-user.less";
 @import "page/product-detail.less";
+@import "page/search-result.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
