--- a/myface-onface-html/src/views/block/_filter-bar.html
+++ b/myface-onface-html/src/views/block/_filter-bar.html
@@ -54,7 +54,7 @@
       <li class="tab-item">
       	<a href="#">Kích thước</a>
       	<ul class="dropdown-menu tab-sub">
-      		<li><a href="#">Kích thước 1</a></li>
+      		<li class="active"><a href="#">Kích thước 1</a></li>
       		<li><a href="#">Kích thước 2</a></li>
       		<li><a href="#">Kích thước 3</a></li>
       	</ul>
