--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -2917,14 +2917,20 @@ footer.main-footer .f-bct > span.bct {
 .filterbar .tabs-menu {
   text-align: left;
   margin-left: -12px;
+  margin-right: 30px;
   float: left;
 }
-.filterbar .tabs-menu.filter-menu {
-  margin-left: 30px;
+.filterbar .tabs-menu.filter-menu,
+.filterbar .tabs-menu.filter-property {
+  margin-right: 0;
 }
 .filterbar .filter-property {
   float: right;
   margin-right: -12px;
+}
+.filterbar .filter-property li .active a {
+  background-color: #ff5722;
+  color: #fff;
 }
 .tab-single a {
   font-weight: normal;
