--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -67,14 +67,24 @@
 	.tabs-menu {
 		text-align: left;
 		margin-left: -12px;
+		margin-right: 30px;
 		float: left;
-		&.filter-menu {
-			margin-left: 30px;
+		&.filter-menu,
+		&.filter-property {
+			margin-right: 0;
 		}
 	}
 	.filter-property {
 		float: right;
 		margin-right: -12px;
+		li {
+			.active {
+				a {
+					background-color: @primary-color;
+					color: #fff;
+				}
+			}
+		}
 	}
 }
 .tab-single {
