--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -19,7 +19,7 @@
 }
 .m-product-info {
 	width: 100%;
-	height: 200px;
+	// height: 200px;
 	border-radius: @border-radius;
 	border: 1px solid #eee;
 	padding: 10px 10px 35px;
