--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -330,3 +330,15 @@
 		background: url(../images/icons/close-hover.png) no-repeat;
 	}
 }
+.shop-list-row {
+	.m-product-item {
+		padding: 0 10px;
+	}
+	.m-product-info {
+		// height: 155px;
+		padding: 0;
+	}
+	.m-product-hover {
+		padding: 10px;
+	}
+}
