--- a/myface-onface-html/src/assets/less/style/variables.less
+++ b/myface-onface-html/src/assets/less/style/variables.less
@@ -98,3 +98,6 @@
 @transition-speed: .3s;
 @transition-fn: ease-in-out;
 //cubic-bezier(0.32,1.25,0.375,1.15);
+
+@dropdown-link-active-color: #fff;
+@dropdown-link-active-bg: @primary-color;
