--- a/myface-onface-html/src/views/block/_filter-bar.html
+++ b/myface-onface-html/src/views/block/_filter-bar.html
@@ -7,7 +7,7 @@
     	<li class="tab-item tab-label">
       	<label>Mức giá:</label>
       </li>
-      <li class="tab-item tab-single">
+      <li class="active tab-item tab-single">
       	<a href="#">Dưới 100k</a>
       </li>
       <li class="tab-item tab-single">
@@ -22,7 +22,7 @@
       <li class="tab-item">
       	<a href="#">Mức giá khác</a>
       	<ul class="dropdown-menu tab-sub">
-      		<li><a href="#">Mức giá khác 1</a></li>
+      		<li class="active"><a href="#">Mức giá khác 1</a></li>
       		<li><a href="#">Mức giá khác 2</a></li>
       		<li><a href="#">Mức giá khác 3</a></li>
       	</ul>
@@ -34,7 +34,7 @@
       <li class="tab-item">
       	<a href="#">Màu sắc</a>
       	<ul class="dropdown-menu tab-sub">
-      		<li><a href="#">Màu sắc 1</a></li>
+      		<li class="active"><a href="#">Màu sắc 1</a></li>
       		<li><a href="#">Màu sắc 2</a></li>
       		<li><a href="#">Màu sắc 3</a></li>
       		<li><a href="#">Màu sắc 1</a></li>
