--- a/myface-onface-html/src/views/myface-shop-list.html
+++ b/myface-onface-html/src/views/myface-shop-list.html
@@ -45,7 +45,7 @@
             Editor’s Picks brings you the best offte boohoo, freshly picked in one place for your shopping pleasure.
           </p>
         </div>
-        <div class="col-xs-12 col-md-8 shop-list-row">
+        <div class="col-xs-12 col-md-8 m-shop-list-row">
           <button class="arrow arrow-left" aria-label=""><span class="icon"></span></button>
           <ol class="m-product-list">
             {% for x in [1,2,3,4] %}  
