--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -738,6 +738,12 @@ img {
   border-left: 10px solid #ff5722;
   border-bottom: 13px solid transparent;
 }
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+  color: #fff;
+  background-color: #ff5722;
+}
 .blue-dropdown {
   padding: 6px 0;
   color: #2bc5f8;
@@ -1668,7 +1674,6 @@ footer.main-footer .f-bct > span.bct {
 }
 .m-product-info {
   width: 100%;
-  height: 200px;
   border-radius: 3px;
   border: 1px solid #eee;
   padding: 10px 10px 35px;
@@ -2730,6 +2735,11 @@ footer.main-footer .f-bct > span.bct {
   font-size: 14px;
   text-align: right;
 }
+.tab-item.active > a,
+.tab-item.active > a:hover,
+.tab-item.active > a:focus {
+  color: #ff5722;
+}
 .tab-item:hover > a {
   color: #ff5722;
 }
@@ -2750,6 +2760,10 @@ footer.main-footer .f-bct > span.bct {
   text-align: left;
   max-height: 245px;
   overflow-y: auto;
+}
+.tab-sub li.active a {
+  background-color: #ff5722;
+  color: #fff;
 }
 .tab-sub::-webkit-scrollbar {
   width: 5px;
@@ -2840,22 +2854,22 @@ footer.main-footer .f-bct > span.bct {
 .meta-tags a:hover {
   text-decoration: none;
 }
-.shop-list-row {
-  height: 155px;
+.m-shop-list-row {
   padding: 0 15px;
   overflow: hidden;
 }
-.shop-list-row .m-product-list {
+.m-shop-list-row .m-product-list {
   white-space: nowrap;
   position: static;
   overflow: hidden;
 }
-.shop-list-row .m-product-item {
+.m-shop-list-row .m-product-item {
   float: none;
   display: inline-block;
   padding: 0;
 }
-.shop-list-row .m-product-info {
+.m-shop-list-row .m-product-info {
+  white-space: normal;
   height: 155px;
   padding: 0;
 }
@@ -2927,10 +2941,6 @@ footer.main-footer .f-bct > span.bct {
 .filterbar .filter-property {
   float: right;
   margin-right: -12px;
-}
-.filterbar .filter-property li .active a {
-  background-color: #ff5722;
-  color: #fff;
 }
 .tab-single a {
   font-weight: normal;
@@ -3309,6 +3319,15 @@ footer.main-footer .f-bct > span.bct {
 }
 .close-btn:hover {
   background: url(../images/icons/close-hover.png) no-repeat;
+}
+.shop-list-row .m-product-item {
+  padding: 0 10px;
+}
+.shop-list-row .m-product-info {
+  padding: 0;
+}
+.shop-list-row .m-product-hover {
+  padding: 10px;
 }
 .tags-remind {
   display: block;
