--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -97,6 +97,7 @@
 	text-align: center;
 	padding: 0;
 	margin: 0 auto;
+	
 }
 .tab-item {
 	position: relative;
@@ -124,6 +125,13 @@
 	    text-align: right;
 		}
   }
+  &.active > a {
+  	&,
+  	&:hover,
+  	&:focus {
+  		color: @primary-color;
+  	}
+  }
   &:hover {
   	> a {
   		color: @primary-color;
@@ -147,6 +155,14 @@
 	text-align: left;
 	max-height: 245px;
 	overflow-y: auto;
+	li {
+		&.active {
+			a {
+				background-color: @primary-color;
+				color: #fff;
+			}
+		}
+	}
 	&::-webkit-scrollbar {
     width: 5px;
 	}
@@ -244,8 +260,7 @@
 		}
 	}
 }
-.shop-list-row {
-	height: 155px;
+.m-shop-list-row {
 	padding: 0 15px;
 	overflow: hidden;
 	.m-product-list {
@@ -259,6 +274,7 @@
 		padding: 0;
 	}
 	.m-product-info {
+		white-space: normal;
 		height: 155px;
 		padding: 0;
 	}
