--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -40,6 +40,7 @@
 @import "page/myface-user.less";
 @import "page/product-detail.less";
 @import "page/search-result.less";
+@import "page/account.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
