--- a/myface-onface-html/src/views/user-account-general.html
+++ b/myface-onface-html/src/views/user-account-general.html
@@ -2,8 +2,65 @@
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="wrap-user" style="width: 100%; min-height: 500px">
-		
+	<div class="col-md-10 col-offset-1 wrap-user">
+		<!--user-account-header-->
+		<div class="user-account-header">
+			<div class="user-account-img">
+				<figure class="user-img">
+					<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">		
+				</figure>
+			</div>
+			<div class="user-account-info">
+				<h2 class="user-name"><a href="#">Natalie Berowska</a></h2>
+				<ul class="icon-tools user-contact-info">
+					<li class="phone-info"><a href="tel:0902559591"><span class="icon"></span>0902559591</a></li>
+					<li class="mail-info"><a href="mailto:chienbinh.0904@gmail.com"><span class="icon"></span>chienbinh.0904@gmail.com</a></li>
+				</ul>
+				<ul class="icon-tools tool-info">
+					<li class="m-like">
+						<a href="#"><span class="icon i-like">789</span><span class="icon-text">thích</span></a>
+					</li>
+          <li class="m-pin">
+          	<a href="#"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></a>
+        	</li>     
+        	<li class="m-view">
+        		<a href="#"><span class="icon i-view">456</span><span class="icon-text">xem sản phẩm</span></a>
+        	</li>
+          <li class="m-buy">
+          	<a href="#"><span class="icon i-buy">123</span><span class="icon-text">đã mua</span></a>
+          </li>
+				</ul>
+			</div>
+		</div><!--/.user-account-header-->
+		<!--user-account-nav-->
+		<nav class="user-account-nav">
+			<ul class="nav navbar-nav">
+        <li class="active">
+        	<a href="user-user-account-general.html">Thông tin chung</a>
+        </li>
+        <li>
+        	<a href="#">Kiểm tra đơn hàng</a>
+        </li>
+        <li>
+        	<a href="#">Thông tin giao hàng</a>
+        </li>
+        <li>
+        	<a href="#">Thông tin thanh toán</a>
+        </li>
+        <li>
+        	<a href="#">Điểm thưởng - Điểm tích lũy</a>
+        </li>
+      </ul>
+		</nav><!--./user-account-nav-->
+		<!--user-account-content-->
+		<div class="user-account-content">
+			<div class="user-account-left-side">
+
+			</div>
+			<div class="user-account-left-right">
+
+			</div>
+		</div><!--./user-account-content-->
 	</div>
 </main>
 {% endblock %}
