--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -3355,6 +3355,46 @@ footer.main-footer .f-bct > span.bct {
 .result-number {
   color: #b6b6b6;
 }
+.wrap-user {
+  width: 100%;
+  min-height: 500px;
+}
+.user-account-header {
+  width: 100%;
+  float: left;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.user-account-header a {
+  color: #212121;
+}
+.user-account-header a:hover {
+  color: #ff5722;
+}
+.user-account-header .icon-tools li {
+  margin-right: 10px;
+}
+.user-account-img {
+  width: 165px;
+  float: left;
+}
+.user-img {
+  width: 121px;
+  height: 121px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.user-img img {
+  width: 100%;
+  min-height: 100%;
+}
+.user-name {
+  font-size: 20px;
+  font-weight: 600;
+}
+.user-contact-info {
+  margin-bottom: 10px;
+}
 select.bs-select-hidden,
 select.selectpicker {
   display: none !important;
