--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -32,7 +32,7 @@
 		    <div class="account-nav">
 		    	<ul class="nav navbar-nav">
 		    		<!--account-block-->
-		        <!-- <li class="dropdown account-block">
+		        <li class="dropdown account-block">
 		          <a href="#" class="dropdown-toggle account-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 		          	<div class="account-img">
 		          		<img src="assets/images/upload/user/user-1.jpg" class="acc-image img-circle" alt="myface">
@@ -42,8 +42,8 @@
               	</div>
 		          </a>
 		          <ul class="dropdown-menu account-dropdown">
-		            <li><a href="#">Quản lý tài khoản</a></li>
-		            <li><a href="#">Đơn hàng của tôi</a></li>
+		            <li><a href="user-account-general.html">Quản lý tài khoản</a></li>
+		            <li><a href="user-account-order-info.html">Đơn hàng của tôi</a></li>
 		            <li><a href="#">Thông tin giao hàng</a></li>
 		            <li><a href="#">Điểm thưởng - điểm tích lũy</a></li>
 		            <li><a href="#">Thoát khỏi tài khoản</a></li>
@@ -51,11 +51,11 @@
 		          <a class="invoice-tracking" href="#">
 		          	<span class="account-label-2" data-placement="bottom" title="" data-original-title="Cấu hình &amp; quản lý tài khoản">Theo dõi đơn hàng</span>
 		          </a>
-		        </li> -->
+		        </li>
 		        <!--/.account-block-->
 
 		        <!--account-block login-->
-		        <li class="dropdown account-block">
+		        <li class="dropdown account-block" style="display: none;">
 		          <a href="#" class="dropdown-toggle account-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 		          	<div class="account-img">
 		          		<img src="assets/images/upload/user/user-1.jpg" class="acc-image img-circle" alt="myface">
